# mainman-backend

./: Cargo.toml  Dockerfile  Dockerfile.dev  cargo.toml  diesel.toml  docker-compose.dev.yml  docker-compose.yml  spec.yaml
config/nginx/: Dockerfile
config/nginx/development/: default.conf  localhost.crt  localhost.key
config/nginx/production/: default.conf  shared_location.conf
db/: Dockerfile  diesel.Dockerfile  migrate.Dockerfile
db/initialization/: init.sh
db/migrations/2020-05-24-171535_create_account_table/: up.sql
db/migrations/2020-06-12-172818_create_organisation_table/: down.sql  up.sql
db/migrations/2020-06-15-160329_create_appliance_table/: down.sql  up.sql
db/migrations/2020-07-19-171629_create_maintainer_table/: down.sql  up.sql
db/migrations/2020-07-19-172427_create_maintenance_event_table/: down.sql  up.sql
db/migrations/2020-08-15-090634_create_refresh_token_table/: down.sql  up.sql
db/migrations/2020-10-15-154401_create_maintainer_appliance_table/: down.sql  up.sql
db/migrations/2021-01-03-101346_rename_appliances_to_entities/: down.sql  (+1 more)
db/scripts/: redo.sh  up.sh
mainman/: Cargo.toml
mainman/src/: cache.rs  db.rs  error.rs  initialize.rs  lib.rs  mail.rs  response.rs  routes.rs  schema.rs  server.rs  views.rs
mainman/src/account/: handler.rs  mod.rs  routes.rs
mainman/src/auth/: handler.rs  middleware.rs  mod.rs
mainman/src/billing/: handler.rs  mod.rs  routes.rs
mainman/src/entity/: handler.rs  mod.rs  routes.rs
mainman/src/events/: handler.rs  mod.rs  routes.rs
mainman/src/health/: handler.rs  mod.rs
mainman/src/maintainer/: handler.rs  mod.rs  routes.rs
mainman/src/maintenance/: mod.rs  routes.rs
mainman/src/maintenance/maintenance_event/: handler.rs  mod.rs  routes.rs
mainman/src/maintenance/maintenance_request/: handler.rs  mod.rs  routes.rs
mainman/src/maintenance/maintenance_task/: handler.rs  mod.rs  routes.rs
mainman/src/maintenance/maintenance_trigger/: handler.rs  mod.rs  routes.rs
mainman/src/organisation/: account_role.rs  handler.rs  invite.rs  mod.rs  routes.rs
mainman/src/organisation/plan/: mod.rs
mainman/src/template/: handler.rs  mod.rs  routes.rs  template_type.rs
mainman/templates/base/en/: maintenance_report.html
mainman/templates/email/en/: welcome.html  welcome.txt
mainman/templates/en/: maintenance_request.html
scripts/: env.sh
src/: config.rs  db.rs  error.rs  lib.rs  main.rs  routes.rs  schema.rs  server.rs  state.rs
src/account/: handler.rs  mod.rs  routes.rs
src/appliance/: handler.rs  mod.rs  routes.rs
src/auth/: extractor.rs  handler.rs  middleware.rs  mod.rs  routes.rs
src/entity/: handler.rs  mod.rs  routes.rs
src/health/: handler.rs  mod.rs
src/maintainer/: handler.rs  mod.rs  routes.rs
src/organisation/: handler.rs  mod.rs  routes.rs
stripe/: Cargo.toml
stripe/src/: card.rs  client.rs  customer.rs  error.rs  lib.rs  payment_method.rs  price.rs  product.rs  setup_intent.rs
(+41 files in other folders)
