[package]
name = "hallussa-backend"
version = "0.1.0"
authors = ["Touko Hallasmaa <hallasmaa.touko@gmail.com>"]
edition = "2018"

[dependencies]
actix-redis = "0.8"
actix-rt = "1.0"
actix-web = "2.0"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.0", features = ["chrono", "postgres", "r2d2"] }
dotenv = "0.9"
futures = "0.1"
jsonwebtoken = "7"
listenfd = "0.3"
r2d2 = "0.8"
redis-async = "0.6"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
