[package]
name = "mainman"
version = "0.1.0"
authors = ["Touko Hallasmaa <hallasmaa.touko@gmail.com>"]
edition = "2018"

[dependencies]
actix-identity = "0.2"
actix-redis = "0.8"
actix-rt = "1.0"
actix-web = "2.0"
actix-cors = "0.2"
actix-http = "1.0"
actix-service = "1.0"
bcrypt = "0.8"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.0", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.9"
failure = "0.1.8"
futures = "0.3"
jsonwebtoken = "7"
listenfd = "0.3"
rand = "0.7"
r2d2 = "0.8"
redis-async = "0.6"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
validator = "0.10"
validator_derive = "0.10"
