[package]
name = "mainman"
version = "0.1.0"
authors = ["Touko Hallasmaa <hallasmaa.touko@gmail.com>"]
edition = "2018"

[dependencies]
actix-cors = "0.3"
actix-http = "2"
actix-identity = "0.3"
actix-redis = "0.9"
actix-rt = "1.0"
actix-service = "1.0"
actix-web = "3"
bcrypt = "0.8"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4", features = ["postgres", "r2d2", "chrono", "uuidv07", "serde_json"] }
dotenv = "0.9"
failure = "0.1.8"
futures = "0.3"
heck = "0.3"
jsonwebtoken = "7"
listenfd = "0.3"
r2d2 = "0.8"
rand = "0.7"
redis-async = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
validator = "0.10"
validator_derive = "0.10"
