[package]
name = "mainman"
version = "0.1.0"
authors = ["Touko Hallasmaa <hallasmaa.touko@gmail.com>"]
edition = "2018"

[dependencies]
actix-cors = "0.3"
actix-http = "2"
actix-redis = "0.9"
actix-rt = "1.0"
actix-service = "1.0"
actix-web = { version = "3", features = ["rustls"]}
bcrypt = "0.8"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4", features = ["postgres", "r2d2", "chrono", "uuidv07", "serde_json"] }
dotenv = "0.9"
env_logger = "0.7"
futures = "0.3"
heck = "0.3"
jsonwebtoken = "7"
log = "0.4"
r2d2 = "0.8"
rand = "0.7"
redis-async = "0.6"
rustls = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
validator = { version = "0.11", features = ["derive"] }

stripe = { path = "../stripe" }
